--- a/templates/dashboards/sales/main.html
+++ b/templates/dashboards/sales/main.html
@@ -161,15 +161,15 @@
                         <a class="nav-link" href="/sales/sell"><i class="bi bi-graph-up me-2"></i>Sell</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/sales/my-orders"><i class="bi bi-clipboard-check me-2"></i>My Orders</a>
+                        <a class="nav-link" href="/sales/ready-to-go-orders"><i class="bi bi-clipboard-check me-2"></i>Ready To Go</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/sales/my-orders"><i class="bi bi-box-seam me-2"></i>My Orders</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="/sales/cancel-orders">
                             <i class="bi bi-x-circle me-2"></i>Canceled
                         </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="bi bi-calendar-event me-2"></i>Calendar</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="bi bi-chat-left-text me-2"></i>Messages</a>
