working on packing page

--- a/templates/dashboards/manager/proxy.html
+++ b/templates/dashboards/manager/proxy.html
@@ -1136,21 +1136,29 @@
                 </div>
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link " href="/sales/dashboard"><i class="bi bi-speedometer2 me-2"></i>Dashboard</a>
+                        <a class="nav-link " href="/sales/dashboard"><i
+                                class="bi bi-speedometer2 me-2"></i>Dashboard</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="/sales/sell"><i class="bi bi-graph-up me-2"></i>Sell</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/sales/ready-to-go-orders"><i class="bi bi-clipboard-check me-2"></i>Ready To Go</a>
+                        <a class="nav-link" href="#"><i class="bi bi-people me-2"></i>Customers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/sales/my-orders"><i class="bi bi-box-seam me-2"></i>My Orders</a>
+                        <a class="nav-link" href="#"><i class="bi bi-cart add"></i>Add</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="/sales/cancel-orders">
-                            <i class="bi bi-x-circle me-2"></i>Canceled
-                        </a>
+                        <a class="nav-link" href="#"><i class="bi bi-calendar-event me-2"></i>Calendar</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="bi bi-chat-left-text me-2"></i>Messages</a>
+                    </li>
+                    <li class="nav-item mt-3">
+                        <a class="nav-link" href="#"><i class="bi bi-gear me-2"></i>Settings</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="bi bi-question-circle me-2"></i>Help</a>
                     </li>
                 </ul>
             </div>
