--- a/templates/dashboards/manager/users.html
+++ b/templates/dashboards/manager/users.html
@@ -752,7 +752,8 @@
             color: white !important;
         }
 
-        #usersTable_filter,#usersTable_info {
+        #usersTable_filter,
+        #usersTable_info {
             display: none !important;
         }
     </style>
@@ -761,18 +762,19 @@
 
 <body>
     <!-- Sidebar & Mobile Nav -->
-    <!-- Custom Responsive Navigation -->
     <aside class="custom-sidebar" id="sidebar">
         <h1 class="sidebar-title">Manager<span style="color: rgb(250, 250, 121);">Pro</span></h1>
         <ul class="sidebar-menu">
-            <li><a href="/manager/dashboard" class="sidebar-link"><i class="bi bi-speedometer2"></i>
+            <li><a href="/manager/dashboard" class="sidebar-link "><i class="bi bi-speedometer2"></i>
                     <span>Dashboard</span></a></li>
             <li><a href="/manager/users" class="sidebar-link active"><i class="bi bi-people"></i> <span>Users</span></a>
             </li>
+            <li><a href="/manager/events" class="sidebar-link"><i class="bi-megaphone"></i> <span>Events</span></a></li>
             <li><a href="#" class="sidebar-link"><i class="bi bi-calendar-check"></i> <span>Schedule</span></a></li>
             <li><a href="#" class="sidebar-link"><i class="bi bi-clipboard-data"></i> <span>Performance</span></a></li>
             <li><a href="#" class="sidebar-link"><i class="bi bi-gear"></i> <span>Settings</span></a></li>
-            <li><a href="/logout" class="sidebar-link"><i class="bi bi-box-arrow-right me-2"></i><span>Logout</span></a></li>
+            <li><a href="/logout" class="sidebar-link"><i class="bi bi-box-arrow-right me-2"></i><span>Logout</span></a>
+            </li>
         </ul>
     </aside>
     <header class="custom-topbar" id="topbar">
@@ -907,7 +909,8 @@
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Username</label>
-                            <input type="text" class="form-control" name="username" disabled style="background-color: transparent;">
+                            <input type="text" class="form-control" name="username" disabled
+                                style="background-color: transparent;">
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Role</label>
